                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-05-2006 changed: FATX filename shortening now makes sure to keep important numbers such as .partXXX.rar, CD2.avi in filenames (for FTP uploads to xbox, etc.)
 - 01-05-2006 fixed: shoutcast and lastfm directories didn't honor hide/show parent folder item.
 - 01-05-2006 fixed: album information showed for playlists in context menu.
 - 01-05-2006 fixed: really fixed xbmc.runxbe + .cut files.
 - 01-05-2006 changed: Keymap settings - Keyboard users have more control over fullscreen info. Changes also mean remote,gamepad,keyboard users have consistent buttons on all fullscreen media.
 - 01-05-2006 fixed: [ 1478394 ] "My Pictures" info-bar problem.
 - 30-04-2006 fixed: [ 1479326 ] No ip message when not connected
 - 30-04-2006 fixed: [ 1479638 ] "Settings" item in filemanagers contextmenu not working
 - 30-04-2006 fixed: cddb infomation may not be returned as utf-8, if this is the case the info will be converted from user charset to utf-8
 - 30-04-2006 fixed: playback of some mp3 files with unknown data before and in the first mp3-frames.
 - 30-04-2006 fixed: shortcuts didn't work in file manager or with xbmc.runxbe. also custom fields weren't read.
 - 30-04-2006 updated: lame to version 3.97beta2 (system/cdrip contains the updated dll)
 - 30-04-2006 changed: Music OSD keymap - CodecInfo & MusicInfo changed from global to local settings (Gamepad/Remote). Slidehow keymap fixed changed from 'Info' to 'CodecInfo' (Gamepad/Keyboard).
 - 30-04-2006 changed: Slideshow keymap - Info button on remote now correctly shows image information.