@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-05-2006 fixed: cd-ripper can't rip cd's whose cddb info contains none latin characters
+ - 01-05-2006 changed: cd-ripper's lame encoder now uses --vbr-new for ripping in vbr mode
+ - 01-05-2006 changed: cd-ripper now writes unicode tags
  - 01-05-2006 changed: FATX filename shortening now makes sure to keep important numbers such as .partXXX.rar, CD2.avi in filenames (for FTP uploads to xbox, etc.)
  - 01-05-2006 fixed: shoutcast and lastfm directories didn't honor hide/show parent folder item.
  - 01-05-2006 fixed: album information showed for playlists in context menu.
